--- a/eat-healthy.html
+++ b/eat-healthy.html
@@ -45,5 +45,7 @@
             <img src="images/female-main.jpg" alt="">
         </div>
     </section>
+
+    <img src="images/female-main.jpg" alt="">
 </body>
 </html>
